# WOMP

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  read.md  test.json  womp.code-workspace
.github/: FUNDING.yml
.github/workflows/: BUILD.yml
crates/womp/: Cargo.toml  index.html  package-lock.json  package.json
crates/womp-cli/: Cargo.toml
crates/womp-cli/src/: main.rs
crates/womp-core/: Cargo.toml
crates/womp-core/src/: ccd_manager.rs  config_manager.rs  lib.rs
crates/womp-core/src/serde_types/: config.rs  global_config.rs  win32_additional_info.rs  win32_mode_info.rs  win32_rational.rs  win32_region.rs  win32_video_signal_info_union.rs
crates/womp/src/: App.css  App.tsx  ccd_manager.rs  config_manager.rs  global_state.rs  lib.rs  main.tsx  serde.rs  serde_types.rs  tray.ts
crates/womp/src-tauri/: Cargo.toml  add_to_path.ps1  nsis_hooks.nsh  tauri.conf.json
crates/womp/src-tauri/src/: external.rs  lib.rs  main.rs
crates/womp/src/components/: Card.tsx  ProfileEditor.tsx  ProfileName.tsx  Settings.tsx  StartupScreen.tsx  ThemeSelect.tsx  Titlebar.tsx  TrayIconSelect.tsx  UpdaterDialog.tsx
crates/womp/src/dialogs/: DeleteProfileDialog.tsx
crates/womp/src/lib/: globalConfig.ts  glyphToImage.ts  navigationStore.ts  themeStore.ts  updater.ts
crates/womp/src/serde/: config.rs  win32_additional_info.rs  win32_i32_tuple_struct.rs  win32_path_info.rs  win32_widestring.rs
crates/womp/src/serde_types/: config.rs  global_config.rs  optional_info.rs  win32_additional_info.rs  win32_mode_info.rs  win32_path_info.rs  win32_pointl.rs
crates/womp/src/styles/: navigationView.ts  titlebar.ts
crates/womp_cli/: Cargo.toml
crates/womp_cli/src/: main.rs
crates/womp_gui/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
crates/womp_gui/src/: App.css  App.tsx  Dialog.tsx  ThemeToggle.tsx  main.tsx  tray.ts  zustand.ts
crates/womp_gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/womp_gui/src-tauri/capabilities/: dialog.json  main.json
crates/womp_gui/src-tauri/src/: external.rs  lib.rs  main.rs  protocol.rs  tray.rs
crates/womp_gui/src/components/: BackButton.tsx  Card.tsx  Content.tsx  DynamicIcon.tsx  NavigationView.tsx  ProfileEditor.tsx  ProfileName.tsx  Settings.tsx  SettingsCard.tsx  ThemeToggle.tsx  Titlebar.tsx
crates/womp_gui/src/dialogs/: DeleteProfileDialog.tsx  NewProfileDialog.tsx  OverwriteProfileDialog.tsx
crates/womp_gui/src/lib/: globalConfig.ts  glyphToImage.ts  navigationStore.ts  notification.ts  profileStore.ts  theme.ts  themeStore.ts  types.ts
crates/womp_gui/src/styles/: dialog.ts  navigationView.ts  profileEditor.ts  titlebar.ts
docs/: _config.yml  index.html  privacy.html
womp/src/: ccd.rs  lib.rs  serde.rs
womp/src/serde/: win32_additional_info.rs  win32_bool.rs  win32_mode_info.rs  win32_path_info.rs  win32_video_signal_info_union.rs
womp_cli/: Cargo.toml
womp_cli/src/: main.rs
womp_lib/: Cargo.toml
womp_lib/src/: ccd.rs  main.rs  serde.rs  types.rs
womp_lib/src/serde/: win32_luid.rs  win32_mode_info.rs  win32_rational.rs  win32_region.rs  win32_widestring.rs
