[workspace]
resolver = "3"
members = [
    "crates/womp",
    "crates/womp_cli",
    "crates/womp_gui/src-tauri"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nikolas Sturm <nikolas@nvsturm.com>"]
description = "WindowsOutputManagerProtocol (WOMP) makes it easy to manage your Windows display devices."
license = "MIT"
readme = "README.md"
repository = "https://github.com/nikolas-sturm/womp"

[workspace.dependencies]
womp = { path = "crates/womp" }
