[package]
name = "womp_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
womp = { path = "../womp" }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.140"
