[package]
name = "womp_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
widestring = "1.2.0"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Devices_Display"
]}
