[package]
name = "womp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
dirs = "6.0.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
widestring = "1.2.0"
windows = { version = "0.61.1", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_UI_WindowsAndMessaging"
]}
