cargo-features = ["profile-rustflags"]

[package]
name = "womp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI Client for WOMP, the WindowsOutputManagerProtocol."
readme.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "womp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
png = "0.17.8"
tauri = { version = "2", features = [ "unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
ttf-parser = "0.25.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
womp-core = { workspace = true }
window-vibrancy = "0.6.0"
windows = { workspace = true }
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
