[package]
name = "womp_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI Client for WOMP, the WindowsOutputManagerProtocol."
readme.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "womp_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
png = "0.17.8"
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
ttf-parser = "0.25.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
womp = { workspace = true }
window-vibrancy = "0.6.0"
windows = { version = "0.61.1", features = ["UI_ViewManagement", "Win32_Graphics_Gdi"] }
tauri-plugin-process = "2"
